fixed spacing issue

--- a/src/component/House/House.css
+++ b/src/component/House/House.css
@@ -12,7 +12,7 @@
    float: left;
    height: 100%;
    width: 33%;
-   padding: 10px;
+   padding: 10px 20px 10px 10px;
    display: flex;
    flex-direction: column;
 }
